# rusty-fish-logger

./: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: lib.rs  main.rs
src/controllers/: service_controller.rs
src/models/: model.rs
