[package]
name = "fish-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
serde = "1.0.190"
surrealdb = { version = "1.0.0", features = ["kv-mem", "default"] }
tokio = "1.33.0"
