[package]
name = "fish-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
once_cell = "1.18.0"
serde = { version = "1.0.190", features = ["derive"] }
surrealdb = { version = "1.0.0", features = [
    "default",
] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
